===v4.7.2===
 * New Icon Type: Lightwell
 * Condition icons now use the Custom Texture editbox to select their texture instead of the Choose Name editbox (for consistency)
 * You can now output text to the raid warning frame without actually sending a raid warning to your raid.
 * Bug Fixes:
 ** (r344) Temporary fix (I hope) for the bug where OmniCC timers would randomly stop after a timer was refreshed.
 ** (r345) TellMeWhen.lua:1467 table index is nil
 ** (r346) The suggestion list for weapon enchants should once again function properly.

===v4.7.1===
 * Bug Fixes:
 ** (r342) Condition icons will no longer spam their event outputs when "Only show if timer is active" is enabled.
 
===v4.7.0===
 * Completely redid the color system. Colors are now defined (in the main optons) globally, with the option to configure them per icon type and override the global settings.
 * Addded "%p" as a substitution for the name of the previously checked unit.
 * Unit substitutions can be used as the destination for a whisper text output.
 * You can right-click-drag icons anywhere on screen to anchor them to any mouse enabled frame, or to move an icon into a new group.
 * Added a setting to disable new version warnings.
 * It is now easier to delete old groups.
 * Added substitutions "%d" for duration and "%k" for stacks.
 * Added events for duration and stack changes, and expanded event settings.
 * Performance Increase: Icons should no longer update themselves multiple times within one update period when the update interval is set to zero and the icon is being checked by multiple metas/conditions.
 * You can now set a group as a component of a meta icon, causing the meta icon to check all icons that are part of the selected group.
 * Meta icons now support the "Always Hide" setting.
 * Conditions can now check "%u" as a unit, which will substitute in whatever unit the icon is currently checking.
 * Added conditions to check absolute and max values of resources.
 * Bug Fixes: