@@ -2,6 +2,8 @@
  * New Icon Type: Lightwell
  * Condition icons now use the Custom Texture editbox to select their texture instead of the Choose Name editbox (for consistency)
  * You can now output text to the raid warning frame without actually sending a raid warning to your raid.
+ * You can now export icons to an entire raid or your entire guild by typing "RAID" or "GUILD" as the name to export to.
+ * Meta icons can now sort their components based on their current duration.
  * Bug Fixes:
  ** (r344) Temporary fix (I hope) for the bug where OmniCC timers would randomly stop after a timer was refreshed.
  ** (r345) TellMeWhen.lua:1467 table index is nil
